test/tests/operators/accept_http/error_max_connections_too_large.txt
error: `max_connections` is too large
 --> tests/operators/accept_http/error_max_connections_too_large.tql:5:47
  |
5 | accept_http "127.0.0.1:8080", max_connections=4294967296 {
  |                                               ^^^^^^^^^^ 
  |
  = note: maximum supported value: 4294967295
